<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.simtechdata</groupId>
    <artifactId>FinalGCode</artifactId>
    <version>1.2</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <javafx.version>19</javafx.version>
        <exec.appName>com.simtechdata.finalgcode</exec.appName>
        <exec.AppShortName>FinalGCode</exec.AppShortName>
        <exec.mainClass>com.simtechdata.finalgcode.Launcher</exec.mainClass>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.simtechdata</groupId>
            <artifactId>EasyFXControls</artifactId>
            <version>1.4.0</version>
        </dependency>
        <dependency>
            <groupId>com.simtechdata</groupId>
            <artifactId>SceneOneFX</artifactId>
            <version>1.3.91</version>
        </dependency>
        <dependency>
            <groupId>no.tornado</groupId>
            <artifactId>tornadofx-controls</artifactId>
            <version>1.0.6</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
            <version>1.15</version>
        </dependency>
        <dependency>
            <groupId>org.jasypt</groupId>
            <artifactId>jasypt</artifactId>
            <version>1.9.3</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-crypto</artifactId>
            <version>5.7.3</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.classgraph</groupId>
            <artifactId>classgraph</artifactId>
            <version>4.8.154</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
<!--
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-toolchains-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>toolchain</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <toolchains>
                        <jdk>
                            <version>19</version>
                            <vendor>sun</vendor>
                        </jdk>
                    </toolchains>
                </configuration>
            </plugin>
-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.0</version>
                <configuration>
                    <source>19</source>
                    <target>19</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <skipIfEmpty>true</skipIfEmpty>
                    <archive>
                        <manifestEntries>
                            <Main-Class>${exec.mainClass}</Main-Class>
                            <Automatic-Module-Name>${exec.appName}</Automatic-Module-Name>
                            <Program-Version>${project.version}</Program-Version>
                            <Implementation-Version>${project.version}</Implementation-Version>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>io.github.fvarrui</groupId>
                <artifactId>javapackager</artifactId>
                <version>1.6.7</version>
                <configuration>
                    <mainClass>${exec.mainClass}</mainClass>
                    <bundleJre>true</bundleJre>
                    <customizedJre>false</customizedJre>
                    <generateInstaller>true</generateInstaller>
                    <administratorRequired>false</administratorRequired>
                    <copyDependencies>true</copyDependencies>
                </configuration>
                <executions>
                    <execution>
                        <id>mac</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <assetsDir>${projectdir}/assets</assetsDir>
                            <platform>auto</platform>
                            <createZipball>false</createZipball>
                            <createTarball>false</createTarball>
                            <vmArgs>
                                <vmArg>--enable-preview</vmArg>
                            </vmArgs>
                            <additionalModulePaths>
                                <modulePath>/Library/Java/JavaVirtualMachines/JavaFX/19.0.2.1/javafx-jmods-19.0.2.1</modulePath>
                            </additionalModulePaths>
                            <additionalResources>
                                <resource>/Library/Java/JavaVirtualMachines/JavaFX/19.0.2.1/javafx-sdk-19.0.2.1</resource>
                            </additionalResources>
                            <macConfig>
                                <volumeIcon>/Users/michael/IdeaProjects/FinalGCode/img/logo.png</volumeIcon>
                                <icnsFile>/Users/michael/IdeaProjects/FinalGCode/assets/mac/FinalGCode.icns</icnsFile>
                                <generateDmg>true</generateDmg>
                                <generatePkg>false</generatePkg>
                                <macStartup>X86_64</macStartup>
                            </macConfig>
<!--
                            <winConfig>
                                <icoFile>C:\IdeaProjects\${exec.AppShortName}\assets\windows\${exec.AppShortName}Icon.ico</icoFile>
                                <generateSetup>true</generateSetup>
                                <generateMsi>false</generateMsi>
                                <generateMsm>false</generateMsm>
                                <headerType>gui</headerType>
                                <setupMode>installForAllUsers</setupMode>
                                <disableRunAfterInstall>false</disableRunAfterInstall>
                                <removeOldLibs>true</removeOldLibs>
                                <createDesktopIconTask>true</createDesktopIconTask>
                                <removeOldLibs>true</removeOldLibs>
                            </winConfig>
-->
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
